# WhyYouForgetMe

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh  installer.iss
.github/workflows/: build.yml
assets/: banco.md  config.toml
src/: brain.rs  clock.rs  config.rs  main.rs  ui.rs
