[package]
name        = "whyyouforgetme"
version     = "0.1.0"
edition     = "2021"
description = "A cynical plant tamagotchi"

[[bin]]
name = "plant"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
rand        = "0.8"
sdl2        = { version = "0.37", features = ["image", "ttf"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
